--- a/index.html
+++ b/index.html
@@ -1,11 +1,66 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Curriculum vitae</title>
 </head>
+
 <body>
+    <header>
+        <h1>Clément Sylvain</h1>
+        <p>Développeur web junior</p>
+    </header>
+    <div>
+        <address>
+            <a
+                href="https://www.google.fr/maps/place/12+Rue+des+Oliviers,+53200+La+Roche-Neuville/@47.8746148,-0.7546056,17z/data=!3m1!4b1!4m6!3m5!1s0x4808f12c7939a8a7:0xaefceff0de598651!8m2!3d47.8746112!4d-0.7520307!16s%2Fg%2F11c1fvm555?entry=ttu">
+                12 Rue des Oliviers 53200 La Roche-Neuville
+            </a>
+            <a href="mailto:clement.sylvain24@gmail.com">clement.sylvain24@gmail.com</a>
+            <a href="tel:0606060606">0606060606</a>
+        </address>
+    </div>
+    <div>
+        <p>A propos</p>
+    </div>
+    <div>
+        <p>Expériences professionnelles</p>
+        <ul>
+            <li>
+            </li>
+        </ul>
+    </div>
+    <div>
+        <p> Diplômes/Formations</p>
+        <ul>
+            <li>
+            </li>
+        </ul>
+    </div>
+    <div>
+        <p>Compétences</p>
+        <ul>
+            <li>
+            </li>
+        </ul>
+    </div>
+    <div>
+        <p>Langues parlées</p>
+        <ul>
+            <li>
+            </li>
+        </ul>
+    </div>
+    <div>
+        <p>Centres d'interêt</p>
+        <ul>
+            <li>
+            </li>
+        </ul>
+    </div>
 </body>
+
 </html>
