--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum vitae</title>
+    <link rel="stylesheet" href="/CSS/style.css">
 </head>
 
 <body>
@@ -27,9 +28,57 @@
         <p>A propos</p>
     </div>
     <div>
-        <p>Expériences professionnelles</p>
+        <h1>Expériences professionnelles</h1>
+        <h2>Conseiller commercial "BOULANGER"</h2>
+        <p>Du 04/01/2015 au 28/12/2015</p>
         <ul>
             <li>
+                Acceuil, conseil et accompagnement clientèle
+            </li>
+            <li>
+                Mise en rayon, respect des merchandisings
+            </li>
+            <li>
+                Réception des livraisons
+            </li>
+        </ul>
+        <h2>Commercial "S.A.R.L DESMAZES"</h2>
+        <p>Du 11/01/2016 au 28/01/2016</p>
+        <ul>
+            <li>
+                Représentant de l'entreprise en foire exposition
+            </li>
+            <li>
+                Renseignement clientèle
+            </li>
+            <li>
+                Prise de contact
+            </li>
+        </ul>
+        <h2>Commercial "La Bourse de l'immobilier</h2>
+        <p>Du 01/04/2016 au 01/08/2016</p>
+        <ul>
+            <li>
+                Acceuil orientation clientèle
+            </li>
+            <li>
+                Prospection
+            </li>
+            <li>
+                Renseignement clientèle
+            </li>
+        </ul>
+        <h2>Porteur de repas "C.I.A.S"</h2>
+        <p>Depuis le 01/08/2017</p>
+        <ul>
+            <li>
+                Livraison de repas à domicile
+            </li>
+            <li>
+                Organisation des tournées
+            </li>
+            <li>
+                Aide au personnes en perte d'autonomie
             </li>
         </ul>
     </div>
