CV HTML complet

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         </address>
     </div>
     <div>
-        <p>A propos</p>
+        <h1>A propos</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat assumenda itaque hic quaerat accusamus dolores, labore rerum praesentium temporibus ullam, consectetur voluptas repellendus voluptate sapiente. Magni, aliquid. 
+        Illo, quaerat nihil error cum numquam nostrum, dolor beatae, explicabo consequatur in voluptatibus dolorem! Asperiores quasi incidunt suscipit. Vel.</p>
     </div>
     <div>
         <h1>Expériences professionnelles</h1>
@@ -83,23 +85,43 @@
         </ul>
     </div>
     <div>
-        <p> Diplômes/Formations</p>
+        <h1>Diplômes/Formations</h1>
+        
+        <h2>Developpeur web, web mobile</h2>
+        <p>Depuis le 28/08/2023</p>
+        <p>Centre Européen de Formation</p>
+        
+        <h2>Bac pro vente/Commercial</h2>
+        <p>Du 05/09/2013 au 11/06/2016</p>
+        <p>Chambre de commerce</p>
+
+
+    </div>
+    <div>
+        <h1>Compétences</h1>
         <ul>
             <li>
+                HTML 5 - Expert
+            </li>
+            <li>
+                CSS 3 - Intérmediaire
+            </li>
+            <li>
+                GitHub - Débutant
             </li>
         </ul>
     </div>
     <div>
-        <p>Compétences</p>
+        <h1>Langues parlées</h1>
         <ul>
             <li>
+                Français - Langue maternelle
             </li>
-        </ul>
-    </div>
-    <div>
-        <p>Langues parlées</p>
-        <ul>
             <li>
+                Espagnol - Expert
+            </li>
+            <li>
+                Anglais - Avancé
             </li>
         </ul>
     </div>
@@ -107,6 +129,16 @@
         <p>Centres d'interêt</p>
         <ul>
             <li>
+                Voyages
+            </li>
+            <li>
+                Sport
+            </li>
+            <li>
+                Moto
+            </li>
+            <li>
+                Randonnée
             </li>
         </ul>
     </div>
